--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -150,7 +150,7 @@
             <%end%>
           </div>
           <div class="col-3 col-md-4 col-lg-3 col-xl-2 ord-10 col-md-6-prd">
-            <%= link_to professional_loan_path('step1'), method: :get do %>
+            <%= link_to custom_professional_loan_path, method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">Professional Loan</h1>
                 <p class="product-desc">Check, track &amp; build your credit score</p>
@@ -164,7 +164,7 @@
             <%end%>
           </div>
           <div class="col-3 col-md-4 col-lg-3 col-xl-2 ord-10 col-md-6-prd">
-            <%= link_to home_loan_path('step1'), method: :get do %>
+            <%= link_to custom_home_loan_path, method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">Home Loan</h1>
                 <p class="product-desc">Check, track &amp; build your credit score for best loan &amp; card offers</p>
@@ -180,7 +180,7 @@
         </div>
         <div class="row">
           <div class="col-3 col-md-4 col-lg-3 col-xl-2 ord-10 col-md-6-prd">
-            <%= link_to transfer_home_loan_path('step1'), method: :get do %>
+            <%= link_to custom_transfer_home_loan_path, method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">Transfer Home Loan</h1>
                 <p class="product-desc">Check, track &amp; build your credit score </p>
@@ -191,7 +191,7 @@
             <%end%>
           </div>
           <div class="col-3 col-md-4 col-lg-3 col-xl-2 ord-10 col-md-6-prd">
-            <%= link_to loan_against_property_path('step1'), method: :get do %>
+            <%= link_to custom_loan_against_property_path, method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">Loan Against Property</h1>
                 <p class="product-desc">Check, track &amp; build your credit score </p>
@@ -205,7 +205,7 @@
             <%end%>
           </div>
           <div class="col-3 col-md-4 col-lg-3 col-xl-2 ord-10 col-md-6-prd">
-            <%= link_to new_car_loan_path('step1'), method: :get do %>
+            <%= link_to custom_new_car_loan_path, method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">New Car Loan</h1>
                 <p class="product-desc">Check, track &amp; build your credit score for best loan &amp; card offers</p>
@@ -216,7 +216,7 @@
             <%end%>
           </div>
           <div class="col-3 col-md-4 col-lg-3 col-xl-2 ord-10 col-md-6-prd">
-            <%= link_to used_car_loan_path('step1'), method: :get do %>
+            <%= link_to custom_used_car_loan_path, method: :get do %>
               <div class="pb-product active">
                 <h1 class="product-name">Used Car Loan</h1>
                 <p class="product-desc">Check, track &amp; build your credit score for best loan &amp; card offers</p>
