--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -131,20 +131,38 @@
 .custom-application {
   padding-top: 10px;
   border-bottom: 2px solid #d5d5d7;
-  .col-md-7 {
+  .col-md-12 {
     margin: 0 auto;
+    margin-bottom: 15px;
   }
   input, select {
-    border-radius: 5px;
-    border: 1px solid #2f4c44;
     height: 40px !important;
+    border: none;
+    border-bottom: 1px solid #838383;
+    border-radius: unset;
+    -webkit-box-shadow: unset;
+  }
+  input:focus{
+    color: unset;
+    background-color: unset;
+    border-color: unset;
+    outline: unset;
+    box-shadow: unset;
+    border: none;
+    border-bottom: 1px solid #838383;
+    border-radius: unset;
+    -webkit-box-shadow: unset;
   }
   label {
     font-size: 20px;
+    color: #838383;
   }
   p {
     font-size: 20px;
     font-weight: lighter;
+  }
+  label.error {
+    color: #f54545 !important;
   }
 }
 
@@ -169,7 +187,7 @@
       color: #1b1dc7;
     }
   }
-  p {
+  p, li, a {
     font-size: 20px;
   }
 }
@@ -201,10 +219,14 @@
 
 .other-services {
   a {
-    background: #dfd8e5;
-    padding: 10px;
-    border-radius: 5px;
-    margin-right: 20px;
+    color: #0000ff;
+    font-weight: 500;
+    background-color: #fff;
+    border-radius: 8px;
+    border: 1px solid #ebeff7cc;
+    box-shadow: 0 2px 4px 0 #052f5f0a, 0 12px 16px 0 #3469cb1f;
+    padding: 15px;
+    margin-right: 15px;
   }
   margin-bottom: 100px;
   text-align: center;
