--- a/app/views/home/credit_card.html.erb
+++ b/app/views/home/credit_card.html.erb
@@ -12,21 +12,29 @@
     <div class="col-md-6">
       <p>Please provide following details for the application</p>
       <%= form_for @credit_card, :url => { :action => "credit_card" }, remote: false, html: { class: "custom_credit_card" } do |f| %>
-          <div class="">
-            <label>Your Full Name</label>
-            <%= f.text_field(:full_name, class: "form-control") %>
+          <div class="row">
+            <div class="col-md-12">
+              <label>Your Full Name</label>
+              <%= f.text_field(:full_name, class: "form-control", autofocus: "true") %>
+            </div>
           </div>
-          <div class="">
-            <label>Your Mobile Number</label>
-            <%= f.number_field(:mobile_number, class: "form-control") %>
+          <div class="row">
+            <div class="col-md-12">
+              <label>Your Mobile Number</label>
+              <%= f.number_field(:mobile_number, class: "form-control") %>
+            </div>
           </div>
-          <div class="">
-            <label>Your Email</label>
-            <%= f.text_field(:email, class: "form-control") %>
+          <div class="row">
+            <div class="col-md-12">
+              <label>Your Email</label>
+              <%= f.text_field(:email, class: "form-control") %>
+            </div>
           </div>
-          <div class="">
-            <label>Your Purpose</label>
-            <%= f.select(:loan_purpose, @credit_card.loan_purpose, class: "form-control") %>
+          <div class="row">
+            <div class="col-md-12">
+              <label>Your Purpose</label>
+              <%= f.select(:loan_purpose, @credit_card.loan_purpose, class: "form-control") %>
+            </div>
           </div>
           <button type="submit" class="btn btn-custom btn-block">Submit</button>
           <br>
@@ -63,7 +71,7 @@
       <p class="pl-ser"><strong>Credit Card EMI Calculator</strong></p>
       <p>Credit Card <a href="/emi_calculator">EMI Calculator</a> is a free tool, which as the name suggests helps credit card holder to calculate monthly repayment schedule if he wants to pay his dues in installments and number two the credit card holder can know the exact interest charges he will be paying if he decides to pay in EMI. This tool offers a break-up of amount to give you a clear idea about what will you be paying towards principal and interest. You can opt for EMIs for amounts ranging from INR 2500 to INR 5 lakh.</p>
       <p>We’re here to answer all your questions and more. Give us a call on <a href="tel:+918806644344">+91-88066-44344</a></p>
-      <p class="pl-ser"><strong>Checkout our other services:</strong></p>
+      <p class="pl-ser"><strong>Checkout our other services:</strong></p><br>
     </div>
   </div>
   <div class="row">
@@ -75,7 +83,7 @@
         <%end%>
         <%= link_to custom_transfer_personal_loan_path, method: :get do %>
           <%= image_tag "icons/transfer-personal-loan-icon.svg", style: "width: 25px;" %>&nbsp;
-          Transgfer Personal Loan
+          Transfer Personal Loan
         <%end%>
         <%= link_to custom_business_loan_path, method: :get do %>
           <%= image_tag "icons/business-loan-icon.svg", style: "width: 25px;" %>&nbsp;
@@ -89,7 +97,7 @@
           <%= image_tag "icons/home-loan-icon.svg", style: "width: 25px;" %>&nbsp;
           Home Loan
         <%end%>
-        <br><br>
+        <br><br><br>
         <%= link_to custom_transfer_home_loan_path, method: :get do %>
           <%= image_tag "icons/tr-home-loan-icon.svg", style: "width: 25px;" %>&nbsp;
           Transfer Home Loan
